remove "Object" from engine

--- a/meson.build
+++ b/meson.build
@@ -52,8 +52,7 @@ libneat = static_library('neat',
 			  'source/Model.cc',
 			  'source/Program.cc',
 			  'source/Text.cc',
-			  'source/Texture.cc',
-			  'source/Object.cc'],
+			  'source/Texture.cc'],
 			 include_directories: includes,
 			 dependencies: deps)
 
