change interface.h to pass command line args instead of window dimensions, which are not required for linux build. update wayland backend add basic modelview tool

--- a/meson.build
+++ b/meson.build
@@ -57,3 +57,7 @@ libneat = static_library('neat',
 			 dependencies: deps)
 
 neat = declare_dependency(link_with: libneat, include_directories: includes)
+
+if get_option('modelview').enabled()
+  subdir('tools/modelview')
+endif
